Secret update :thinking:

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>test</p>
+<h1>Hello :D</h1>
+<p>if you're here. you can secretly download the client at</p>
+  <p>https://assets.devclient.xyz/prebeta/devclient prebeta.zip</p>
 </body>
 </html>
