--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello :D</h1>
 <p>if you're here. you can secretly download the client at</p>
-  <p>https://assets.devclient.xyz/prebeta/devclient prebeta.zip</p>
+  <p>Lastest Release   : https://download.devclient.xyz/release/0.1.zip</p>
+  <p>Latest Prerelease : https://download.devclient.xyz/prerelease/DevClient-0.2.jar</p>
 </body>
 </html>
