--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello :D</h1>
-<p>if you're here. you can secretly download the client at</p>
+<h1>Dev Client - BETA</h1>
+<p>Hi!, if you, somehow, want to download my client, please download one of these.</p>
   <p> </p>
   <p>Lastest Release   : https://download.devclient.xyz/release/0.1.zip</p>
   <p>Latest Prerelease : https://download.devclient.xyz/prerelease/DevClient-0.2.jar</p>
