--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="shortcut icon" href="https://mick.imfast.io/markdown/server.png" />
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>DevClient | Purely for fun.</title><link href='file://night/mermaid.dark.css' rel='stylesheet' type='text/css' /><link href='file://night/codeblock.dark.css' rel='stylesheet' type='text/css' /><link href='file://night/sourcemode.dark.css' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
+<title>DevClient</title><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
 iframe { margin: auto; }
@@ -32,7 +31,7 @@ input[type="checkbox"], input[type="radio"] { line-height: normal; padding: 0px;
 #write h1, #write h2, #write h3, #write h4, #write h5, #write h6, #write p, #write pre { width: inherit; }
 #write h1, #write h2, #write h3, #write h4, #write h5, #write h6, #write p { position: relative; }
 p { line-height: inherit; }
-h1, h2, h3, h4, h5, h6 { break-after: avoid-page; break-inside: avoid; orphans: 2; }
+h1, h2, h3, h4, h5, h6 { break-after: avoid-page; break-inside: avoid; orphans: 4; }
 p { orphans: 4; }
 h1 { font-size: 2rem; }
 h2 { font-size: 1.8rem; }
@@ -83,7 +82,7 @@ blockquote > :first-child, li > :first-child { margin-top: 0px; }
 .footnotes-area { color: rgb(136, 136, 136); margin-top: 0.714rem; padding-bottom: 0.143rem; white-space: normal; }
 #write .footnote-line { white-space: pre-wrap; }
 @media print {
-  body, html { border: 1px solid transparent; height: 99%; break-after: avoid; break-before: avoid; }
+  body, html { border: 1px solid transparent; height: 99%; break-after: avoid; break-before: avoid; font-variant-ligatures: no-common-ligatures; }
   #write { margin-top: 0px; padding-top: 0px; border-color: transparent !important; }
   .typora-export * { -webkit-print-color-adjust: exact; }
   html.blink-to-pdf { font-size: 13px; }
@@ -94,6 +93,7 @@ blockquote > :first-child, li > :first-child { margin-top: 0px; }
 a img, img a { cursor: pointer; }
 pre.md-meta-block { font-size: 0.8rem; min-height: 0.8rem; white-space: pre-wrap; background: rgb(204, 204, 204); display: block; overflow-x: hidden; }
 p > .md-image:only-child:not(.md-img-error) img, p > img:only-child { display: block; margin: auto; }
+#write.first-line-indent p > .md-image:only-child:not(.md-img-error) img { left: -2em; position: relative; }
 p > .md-image:only-child { display: inline-block; width: 100%; }
 #write .MathJax_Display { margin: 0.8em 0px 0px; }
 .md-math-block { width: 100%; }
@@ -618,9 +618,9 @@ g.stateGroup line {
   fill: black;
   font-size: 10px;
   font-weight: bold;
-   }
+}
 
-;
+
 /* CSS Document */
 
 /** code highlight */
@@ -733,7 +733,7 @@ g.stateGroup line {
 .CodeMirror-gutters {
     border-right: none;
 }
-;
+
 /* CSS Document */
 
 /** markdown source **/
@@ -817,6 +817,19 @@ body {
 
 #write {
     max-width: 914px;
+}
+
+
+@media only screen and (min-width: 1400px) {
+	#write {
+		max-width: 1024px;
+	}
+}
+
+@media only screen and (min-width: 1800px) {
+	#write {
+		max-width: 1200px;
+	}
 }
 
 html,
@@ -1763,13 +1776,12 @@ footer.ty-footer {
 <body class='typora-export os-windows' >
 <div  id='write'  class = 'is-node'><p><span> </span></p><p><img src="https://assets.devclient.xyz/images/markdown/mainMenuLogo.png" referrerpolicy="no-referrer" alt="logo" title="yeet"></p><p><img src="https://assets.devclient.xyz/images/markdown/MainMenuLogoPrerelease.png" referrerpolicy="no-referrer"></p><p align="central">
     <a><b>DISCLAIMER :</b> <i>Dev Client is a client purely made <b>for fun</b>, please do not take this like it's <b>Lunar</b> or <b>Badlion</b>.</i></a>
-</p><p>&nbsp;</p><h2><a name="features" class="md-header-anchor"></a><span>Features</span></h2><p><span>・ Discord Rich Presence </span></p><p>&nbsp;</p><h4><a name="work-in-progress-features" class="md-header-anchor"></a><span>Work in progress features </span></h4><p><span>・ Keystoke</span></p><p><span>・ Perspective</span></p><p><span>・ Hit &amp; block (1.7 cuz 1.8 animations are &quot;ok&quot;)</span></p><p><span>・ Dragon Wings </span></p><p><span>・ Animated Capes </span></p><p><span>・ Toggle Spring</span></p><p><span>・ Toggle Sneak</span></p><p>&nbsp;</p><h4><a name="cosmetics" class="md-header-anchor"></a><span>Cosmetics </span></h4><p><span>・ Capes </span></p><p><span>・ Deadmau5&#39;s ears </span></p><p>&nbsp;</p><h4><a name="work-in-progress-cosmetics" class="md-header-anchor"></a><span>Work in progress cosmetics</span></h4><p><span>・ Animated Capes (WIP)</span></p><p><span>・ Dragon Wings (WIP)</span></p><p>&nbsp;</p><h1><a name="downloads" class="md-header-anchor"></a><span>Downloads </span></h1><p>&nbsp;</p><p><span>PS: Please not that Dev Client currently, </span><strong><span>theoretically</span></strong><span>,  only supports </span><strong><span>Windows</span></strong><span> with </span><strong><span>Java 8</span></strong><span> installed. We&#39;ll add support for </span><strong><span>MacOS</span></strong><span> and any </span><strong><span>Linux</span></strong><span> distribution sooner or later. In the meanwhile, you are free to test if it&#39;s compatible or not by launching it like you would normally launch </span><strong><span>Minecraft</span></strong><span>.</span></p><p>&nbsp;</p><h4><a name="releases" class="md-header-anchor"></a><span>Releases </span></h4><p><span>» </span><a href='https://download.devclient.xyz/release/0.1.zip'><span>Download DevClient 0.1</span></a><span> || No external dependencies </span></p><p><span>» </span><a href='https://download.devclient.xyz/release/0.2.zip'><span>Download DevClient 0.2</span></a><span> || No external dependencies </span></p><p><span>» </span><a href='https://download.devclient.xyz/release/0.3.zip'><span>Download DevClient 0.3</span></a><span> || DiscordRPC (Automatically downloaded by Minecraft Launcher)</span></p><p>&nbsp;</p><h4><a name="pre-releases" class="md-header-anchor"></a><span>Pre releases </span></h4><p><span>» DevClient 0.2pre1 (</span><a href='https://download.devclient.xyz/prerelease/0.2-pre1.zip' target='_blank' class='url'>https://download.devclient.xyz/prerelease/0.2-pre1.zip</a><span>) || </span><a href='https://download.devclient.xyz/json/DevClient.json'><span>download json file</span></a></p><p><span>» DevClient 0.4pre1 (</span><a href='https://download.devclient.xyz/prerelease/0.4-pre1.zip' target='_blank' class='url'>https://download.devclient.xyz/prerelease/0.4-pre1.zip</a><span>)</span></p><h1><a name="socials" class="md-header-anchor"></a><span>Socials </span></h1><p align="center">
+</p><p>&nbsp;</p><h2><a name="features" class="md-header-anchor"></a><span>Features</span></h2><p><span>・ Discord Rich Presence </span></p><p>&nbsp;</p><h4><a name="work-in-progress-features" class="md-header-anchor"></a><span>Work in progress features </span></h4><p><span>・ Keystoke</span></p><p><span>・ Perspective</span></p><p><span>・ Hit &amp; block (1.7 cuz 1.8 animations are &quot;ok&quot;)</span></p><p><span>・ Dragon Wings </span></p><p><span>・ Animated Capes </span></p><p><span>・ Toggle Sprint</span></p><p><span>・ Toggle Sneak</span></p><p>&nbsp;</p><h4><a name="cosmetics" class="md-header-anchor"></a><span>Cosmetics </span></h4><p><span>・ Capes </span></p><p><span>・ Deadmau5&#39;s ears </span></p><h1><a name="downloads" class="md-header-anchor"></a><span>Downloads </span></h1><p>&nbsp;</p><p><span>PS: Please note that Dev Client currently, </span><strong><span>theoretically</span></strong><span>, only supports </span><strong><span>Windows</span></strong><span> with </span><strong><span>Java 8</span></strong><span> installed. We&#39;ll add support for </span><strong><span>MacOS</span></strong><span> and any </span><strong><span>Linux</span></strong><span> distribution sooner or later. In the meanwhile, you are free to test if it&#39;s compatible or not by launching it like you would normally launch </span><strong><span>Minecraft</span></strong><span>.</span></p><p><strong><em><span>JULY 1ST</span></em></strong><span>: </span><em><span>MacOS &amp; Linux support added. May or may not work, please DM me on </span><a href='https://t.me/iMPDevMC'><span>Telegram</span></a><span> and tell me what&#39;s wrong.</span></em></p><p>&nbsp;</p><h4><a name="releases" class="md-header-anchor"></a><span>Releases </span></h4><p><span>» </span><a href='https://download.devclient.xyz/release/0.1.zip'><span>Download DevClient 0.1</span></a><span> || No external dependencies </span></p><p><span>» </span><a href='https://download.devclient.xyz/release/0.2.zip'><span>Download DevClient 0.2</span></a><span> || No external dependencies </span></p><p><span>» </span><a href='https://download.devclient.xyz/release/0.3.zip'><span>Download DevClient 0.3</span></a><span> || DiscordRPC (Automatically downloaded by Minecraft Launcher)</span></p><p>&nbsp;</p><h4><a name="pre-releases" class="md-header-anchor"></a><span>Pre releases </span></h4><p><span>» DevClient 0.2pre1 (</span><a href='https://download.devclient.xyz/prerelease/0.2-pre1.jar' target='_blank' class='url'>https://download.devclient.xyz/prerelease/0.2-pre1.jar</a><span>) || </span><a href='https://download.devclient.xyz/json/DevClient.json'><span>download json file</span></a></p><p><span>» DevClient 0.4pre1 (</span><a href='https://download.devclient.xyz/prerelease/0.4-pre1.zip' target='_blank' class='url'>https://download.devclient.xyz/prerelease/0.4-pre1.zip</a><span>)</span></p><h1><a name="socials" class="md-header-anchor"></a><span>Socials </span></h1><p align="center">
     <a>For more updates about this client, please visit our Discord and/or Telegram. </a>
 </p><p align="center">
-    <a href="https://discord.gg/xMrYvF8"><b>Discord</b></a> |
-    <a href="https://t.me/devclientmc"><b>Telegram</b></a>
-</p><p>&nbsp;</p><h3><a name="more-will-be-coming-soon-⚡️-🌙" class="md-header-anchor"></a><span>More will be coming soon ⚡️ 🌙 </span></h3><p aligh="left">
-    <font size="2"><i>Last updated: 03/04/2020 (dd/mm/yyyy)</i></font>
-</p><p>&nbsp;</p></div>
+    <a href="https://discord.gg/xMrYvF8"><b>Discord</b></a> | <a href="https://t.me/devclientmc"><b>Telegram</b></a>
+</p><p>&nbsp;</p><h1><a name="server" class="md-header-anchor"></a><span>Server</span></h1><p><span>I started working on a Minecraft server called </span><strong><span>Starplum</span></strong><span>. It&#39;s a surival server but with custom armor, weapons, and all that. For previews you can join the </span><a href='https://discord.gg/3M3fge6'><strong><span>Discord</span></strong></a><span> or follow me on </span><a href='https://twitter.com/iMPDevMC'><strong><span>Twitter</span></strong></a><span>. The server version is 1.12 but compatible for 1.8+. The server will have an </span><strong><span>API to detect Dev Client users</span></strong><span> and give them </span><strong><span>exclusive items</span></strong><span>. I&#39;ll also be giving away the top rank on the Discord. </span></p><p>&nbsp;</p><h3><a name="more-will-be-coming-soon-⚡️-🌙" class="md-header-anchor"></a><span>More will be coming soon ⚡️ 🌙 </span></h3><p aligh="left">
+    <font size="2"><i>Last updated: 01/07/2020 (dd/mm/yyyy)</i></font>
+</p></div>
 </body>
 </html>
